--- a/automatidata/2017_Yellow_Taxi_Trip_Data.ipynb
+++ b/automatidata/2017_Yellow_Taxi_Trip_Data.ipynb
@@ -32,25 +32,103 @@
     "  - Tolls_amount: Total amount of all tolls paid in trip. \n",
     "  - Total_amount: The total amount charged to passengers. Does not include cash tips.\n",
     "\n",
-    "\n"
+    "### What are the data columns most irrelevant to your deliverable?\n",
+    "\n",
+    "  - Store_and_fwd_flag: dont have correlation in all dataset  \n",
+    "\n",
+    "\n",
+    "### Are in your dataset missing or incomplete data?\n",
+    "  No, but i have incositent data. The columns  with are: \n",
+    "  - Fare_amount: values 0 or negative \n",
+    "  - Extra: negative values\n",
+    "  - Mta_tax: negative values\n",
+    "  - Improvement_surcharge: values 0 or negative\n",
+    "  - Total_amount: values 0 or negative\n",
+    "  \n",
+    "### Which EDA practices will be required to begin this project?\n",
+    "  - Data cleaning & Validity checks\n",
+    "  - Temporal Analysis\n",
+    "  - Univariate Analysis (Distribution of Target)\n",
+    "  - Bivariate Analysis (Feature Relationships)\n",
+    "  \n",
+    "\n",
+    "## **Pace: Analyze**\n",
+    "\n",
+    "In this stage i start data cleaning and validade checks and witch steps is i've do to achive the best resoults. We can continue with some questions. \n",
+    "\n",
+    "\n",
+    "### What steps need to be taken to perform EDA in the most effective way to achieve the project goal?\n",
+    "  #### First: I start plotting my data with Ydata to start my analisys (this is valid for Plan fase too)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "56be1928",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "007b315979f747a08b0af40c58c9d88d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [00:05<00:00,  2.93it/s]7<00:05,  1.02it/s, Describe variable: total_amount]         \n",
-      "Summarize dataset: 100%|██████████| 126/126 [00:13<00:00,  9.40it/s, Completed]                              \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:01<00:00,  1.70s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  4.14it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 66.31it/s]\n"
+      "100%|██████████| 16/16 [00:05<00:00,  2.77it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13219b7feaa24c3293d38640ef0634e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6205311e66f4175a2cc577861b35c16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c9250e7f60a24069a8d1186db4520102",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -62,9 +140,139 @@
     "\n",
     "df_taxi = pd.read_csv(\"2017_Yellow_Taxi_Trip_Data.csv\")\n",
     "df_taxi.drop(\"ID\", axis=1, inplace=True)\n",
-    "\n",
+    "df_taxi.drop(\"VendorID\", axis=1, inplace=True)\n",
     "profile_taxi = ProfileReport(df_taxi, title=\"Taxi analysis with ydata\", explorative=True)\n",
-    "profile_taxi.to_file(\"taxi_analysis_report.html\")\n"
+    "profile_taxi.to_file(\"taxi_analysis_report.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1449505f",
+   "metadata": {},
+   "source": [
+    "#### Second: I start cleaning inconsistant data i find in my plan fase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "32f98db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_taxi.drop(columns=[\"store_and_fwd_flag\"], inplace=True)\n",
+    "df_taxi['tpep_pickup_datetime'] = pd.to_datetime(df_taxi['tpep_pickup_datetime'])\n",
+    "df_taxi['tpep_dropoff_datetime'] = pd.to_datetime(df_taxi['tpep_dropoff_datetime'])\n",
+    "df_taxi = df_taxi[df_taxi['fare_amount'] > 0]\n",
+    "df_taxi = df_taxi[df_taxi['extra'] > 0]\n",
+    "df_taxi = df_taxi[df_taxi['mta_tax'] > 0]\n",
+    "df_taxi = df_taxi[df_taxi['improvement_surcharge'] > 0]\n",
+    "df_taxi = df_taxi[df_taxi['total_amount'] > 0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7859f0d9",
+   "metadata": {},
+   "source": [
+    "#### Third: Now i add a new columns to help analize data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a3b1d25d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_taxi['duration'] = df_taxi['tpep_dropoff_datetime'] - df_taxi['tpep_pickup_datetime']\n",
+    "df_taxi['duration_minutes'] = df_taxi['duration'].dt.total_seconds() / 60\n",
+    "df_taxi.drop(columns=['duration'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29241eec",
+   "metadata": {},
+   "source": [
+    "#### Then i get anoter report with ydata and reanalyze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d9958ce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bc236a3da684056a0c5adc639b9e498",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:00<00:00, 214.46it/s]\n",
+      "c:\\Users\\smota\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\ydata_profiling\\model\\pandas\\discretize_pandas.py:52: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 0 0 0]' has dtype incompatible with timedelta64[ns], please explicitly cast to a compatible dtype first.\n",
+      "  discretized_df.loc[:, column] = self._discretize_column(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3870797f4f74438881ffb881248e6008",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4936bec22fe4543aac1e888d7156161",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3207ce10e70a47beaec2e121b2fc7b49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "profile_taxi = ProfileReport(df_taxi, title=\"Taxi analysis with ydata\", explorative=True)\n",
+    "profile_taxi.to_file(\"taxi_analysis_report_cleaned.html\")"
    ]
   }
  ],
