PACE: Analyze, cleaning data and indentify outliers - Automatidata

--- a/automatidata/2017_Yellow_Taxi_Trip_Data.ipynb
+++ b/automatidata/2017_Yellow_Taxi_Trip_Data.ipynb
@@ -40,7 +40,7 @@
     "### Are in your dataset missing or incomplete data?\n",
     "  No, but i have incositent data. The columns  with are: \n",
     "  - Fare_amount: values 0 or negative \n",
-    "  - Extra: negative values\n",
+    "  - Extra: negative values, wrong values (upper then one)\n",
     "  - Mta_tax: negative values\n",
     "  - Improvement_surcharge: values 0 or negative\n",
     "  - Total_amount: values 0 or negative\n",
@@ -63,74 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "56be1928",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "007b315979f747a08b0af40c58c9d88d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16/16 [00:05<00:00,  2.77it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13219b7feaa24c3293d38640ef0634e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6205311e66f4175a2cc577861b35c16",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9250e7f60a24069a8d1186db4520102",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T10:33:02.647308Z",
+     "start_time": "2025-12-09T10:33:01.815402Z"
     }
-   ],
+   },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -143,7 +82,9 @@
     "df_taxi.drop(\"VendorID\", axis=1, inplace=True)\n",
     "profile_taxi = ProfileReport(df_taxi, title=\"Taxi analysis with ydata\", explorative=True)\n",
     "profile_taxi.to_file(\"taxi_analysis_report.html\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -155,20 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "32f98db3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T10:51:37.021225Z",
+     "start_time": "2025-12-09T10:51:36.994244Z"
+    }
+   },
    "source": [
-    "df_taxi.drop(columns=[\"store_and_fwd_flag\"], inplace=True)\n",
+    "df_taxi.drop(columns=['store_and_fwd_flag'], errors='ignore', inplace=True)\n",
     "df_taxi['tpep_pickup_datetime'] = pd.to_datetime(df_taxi['tpep_pickup_datetime'])\n",
     "df_taxi['tpep_dropoff_datetime'] = pd.to_datetime(df_taxi['tpep_dropoff_datetime'])\n",
     "df_taxi = df_taxi[df_taxi['fare_amount'] > 0]\n",
     "df_taxi = df_taxi[df_taxi['extra'] > 0]\n",
+    "df_taxi = df_taxi[df_taxi['extra'] <= 1]\n",
     "df_taxi = df_taxi[df_taxi['mta_tax'] > 0]\n",
     "df_taxi = df_taxi[df_taxi['improvement_surcharge'] > 0]\n",
     "df_taxi = df_taxi[df_taxi['total_amount'] > 0]\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 37
   },
   {
    "cell_type": "markdown",
@@ -180,100 +127,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "a3b1d25d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T11:34:53.795221Z",
+     "start_time": "2025-12-09T11:34:53.786060Z"
+    }
+   },
    "source": [
     "df_taxi['duration'] = df_taxi['tpep_dropoff_datetime'] - df_taxi['tpep_pickup_datetime']\n",
     "df_taxi['duration_minutes'] = df_taxi['duration'].dt.total_seconds() / 60\n",
+    "df_taxi = df_taxi[df_taxi['duration_minutes'] > 0]\n",
     "df_taxi.drop(columns=['duration'], inplace=True)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 64
   },
   {
    "cell_type": "markdown",
    "id": "29241eec",
    "metadata": {},
    "source": [
-    "#### Then i get anoter report with ydata and reanalyze"
+    "#### Then i get anoter report with ydata and print some graphs to identify outliers and reanilyze the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "d9958ce3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T11:35:14.556844Z",
+     "start_time": "2025-12-09T11:34:55.943226Z"
+    }
+   },
+   "source": [
+    "profile_taxi = ProfileReport(df_taxi, title=\"Taxi analysis with ydata\", explorative=True)\n",
+    "profile_taxi.to_file(\"taxi_analysis_report_cleaned.html\")"
+   ],
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bc236a3da684056a0c5adc639b9e498",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [00:00<00:00, 214.46it/s]\n",
-      "c:\\Users\\smota\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\ydata_profiling\\model\\pandas\\discretize_pandas.py:52: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 0 0 0]' has dtype incompatible with timedelta64[ns], please explicitly cast to a compatible dtype first.\n",
-      "  discretized_df.loc[:, column] = self._discretize_column(\n"
+      "Summarize dataset:  33%|███▎      | 7/21 [00:00<00:01,  7.97it/s, Describe variable: duration_minutes]     \n",
+      "100%|██████████| 16/16 [00:00<00:00, 366.95it/s]00:00, 22.60it/s, Describe variable: duration_minutes]\n",
+      "Summarize dataset: 100%|██████████| 106/106 [00:12<00:00,  8.79it/s, Completed]                                \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:03<00:00,  3.60s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:01<00:00,  1.58s/it]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 11.82it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3870797f4f74438881ffb881248e6008",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4936bec22fe4543aac1e888d7156161",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3207ce10e70a47beaec2e121b2fc7b49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T11:35:15.568406Z",
+     "start_time": "2025-12-09T11:35:14.583182Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "profile_taxi = ProfileReport(df_taxi, title=\"Taxi analysis with ydata\", explorative=True)\n",
-    "profile_taxi.to_file(\"taxi_analysis_report_cleaned.html\")"
-   ]
+    "# Define columns to check for outliers\n",
+    "cols_to_check = ['trip_distance', 'fare_amount', 'total_amount', 'duration_minutes']\n",
+    "\n",
+    "# 1. Visualization: Boxplots\n",
+    "plt.figure(figsize=(10, 15))\n",
+    "for i, col in enumerate(cols_to_check):\n",
+    "    plt.subplot(2, 2, i+1)\n",
+    "    sns.boxplot(y=df_taxi[col])\n",
+    "    plt.title(f'Boxplot of {col}')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('outlier_boxplots.png')\n",
+    "\n",
+    "# 2. Statistical Identification: IQR Method\n",
+    "outlier_stats = {}\n",
+    "for col in cols_to_check:\n",
+    "    Q1 = df_taxi[col].quantile(0.25)\n",
+    "    Q3 = df_taxi[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "    outliers = df_taxi[(df_taxi[col] < lower_bound) | (df_taxi[col] > upper_bound)]\n",
+    "    outlier_stats[col] = {\n",
+    "        'IQR': IQR,\n",
+    "        'Lower Bound': lower_bound,\n",
+    "        'Upper Bound': upper_bound,\n",
+    "        'Num Outliers': len(outliers),\n",
+    "        'Percentage': (len(outliers) / len(df_taxi)) * 100\n",
+    "    }\n",
+    "\n",
+    "# Print stats\n",
+    "print(\"Outlier Statistics (IQR Method):\")\n",
+    "for col, stats in outlier_stats.items():\n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  IQR: {stats['IQR']:.2f}\")\n",
+    "    print(f\"  Bounds: {stats['Lower Bound']:.2f} to {stats['Upper Bound']:.2f}\")\n",
+    "    print(f\"  Outliers: {stats['Num Outliers']} ({stats['Percentage']:.2f}%)\")\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(10, 15))\n",
+    "sns.boxplot(y=df_taxi['total_amount'])\n",
+    "plt.title(f'Boxplot of total_amount')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('outlier_boxplots_fixed.png')\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(x='trip_distance', y='total_amount', data=df_taxi, alpha=0.5)\n",
+    "plt.title('Trip Distance vs Total Amount (Outlier Detection)')\n",
+    "plt.xlabel('Trip Distance (miles)')\n",
+    "plt.ylabel('Total Amount ($)')\n",
+    "plt.savefig('scatter_outliers_fixed.png')"
+   ],
+   "id": "25d4d60f48a051e5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outlier Statistics (IQR Method):\n",
+      "\n",
+      "trip_distance:\n",
+      "  IQR: 2.20\n",
+      "  Bounds: -2.30 to 6.50\n",
+      "  Outliers: 987 (9.28%)\n",
+      "\n",
+      "fare_amount:\n",
+      "  IQR: 7.75\n",
+      "  Bounds: -5.12 to 25.88\n",
+      "  Outliers: 800 (7.52%)\n",
+      "\n",
+      "total_amount:\n",
+      "  IQR: 9.00\n",
+      "  Bounds: -4.70 to 31.30\n",
+      "  Outliers: 793 (7.45%)\n",
+      "\n",
+      "duration_minutes:\n",
+      "  IQR: 10.77\n",
+      "  Bounds: -9.60 to 33.47\n",
+      "  Outliers: 453 (4.26%)\n"
+     ]
+    }
+   ],
+   "execution_count": 66
   }
  ],
  "metadata": {
@@ -292,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
